WikiaMobile: fix for horizontal scroll (BugId: 20387)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@48781 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/WikiaMobile.scss
+++ b/extensions/wikia/WikiaMobile/css/WikiaMobile.scss
@@ -37,6 +37,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	word-wrap: break-word;
 
 	//avoid webkit's automatic text adjustment
 	-webkit-text-size-adjust: none;
